# obs-league-spectator

./: CMakeLists.txt  README.md  worlds2021.json
.github/workflows/: ci.yml
installer/: installer.iss.in
src/: gdi.cpp  gdi.h  lcu.cpp  lcu.h  plugin-macros.h.in  plugin-main.cpp  plugin.cpp  plugin.h
